Fixed #282 Ribbon background is stretching weird on mobile

--- a/style.css
+++ b/style.css
@@ -6156,12 +6156,9 @@ h2.screen-reader-text {
 	}
 	.call-to-action {
 	    background-position: center;
-	    background-repeat: no-repeat;
 	    background-attachment: initial;
 	    background-size: cover;
-	    border-bottom: 1px solid #eaebec;
 	}
-
 
 }
 
